# monyhar

./: README.md
monyhar/android_webview/glue/: BUILD.gn
monyhar/android_webview/glue/java/: DEPS
monyhar/android_webview/glue/java/src/com/android/webview/chromium/: CallbackConverter.java  ContentSettingsAdapter.java  CookieManagerAdapter.java  DrawFunctor.java  DrawGLFunctor.java  GeolocationPermissionsAdapter.java  GlueApiHelperForM.java  GlueApiHelperForN.java  GlueApiHelperForO.java  GlueApiHelperForOMR1.java  GlueApiHelperForP.java  GlueApiHelperForQ.java  GlueApiHelperForR.java  GraphicsUtils.java  PacProcessorImpl.java  SafeBrowsingResponseAdapter.java  ServiceWorkerClientAdapter.java  ServiceWorkerControllerAdapter.java  ServiceWorkerSettingsAdapter.java  SharedStatics.java  SharedTracingControllerAdapter.java  SharedWebViewChromium.java  SharedWebViewContentsClientAdapter.java  SharedWebViewRendererClientAdapter.java  SplitApkWorkaround.java  TracingControllerAdapter.java  WebBackForwardListChromium.java  WebHistoryItemChromium.java  WebIconDatabaseAdapter.java  WebMessagePortAdapter.java  WebResourceErrorAdapter.java  WebResourceRequestAdapter.java  WebStorageAdapter.java  WebViewChromium.java  WebViewChromiumAwInit.java  WebViewChromiumFactoryProvider.java  WebViewChromiumFactoryProviderForO.java  WebViewChromiumFactoryProviderForOMR1.java  WebViewChromiumFactoryProviderForP.java  WebViewChromiumFactoryProviderForQ.java  (+8 more)
monyhar/chrome/browser/android/lifecycle/: BUILD.gn  DEPS  OWNERS
monyhar/chrome/browser/android/lifecycle/java/src/org/chromium/chrome/browser/lifecycle/: ActivityLifecycleDispatcher.java  ActivityResultWithNativeObserver.java  ConfigurationChangedObserver.java  DestroyObserver.java  InflationObserver.java  LifecycleObserver.java  NativeInitObserver.java  PauseResumeWithNativeObserver.java  RecreateObserver.java  SaveInstanceStateObserver.java  StartStopWithNativeObserver.java  WindowFocusChangedObserver.java
monyhar/chrome/browser/feedback/android/: BUILD.gn  OWNERS
monyhar/chrome/browser/feedback/android/java/src/org/chromium/chrome/browser/feedback/: AsyncFeedbackSource.java  AsyncFeedbackSourceAdapter.java  DeviceInfoFeedbackSource.java  FeedbackCollector.java  FeedbackContextFeedbackSource.java  FeedbackReporter.java  FeedbackSource.java  FragmentHelpAndFeedbackLauncher.java  HelpAndFeedbackLauncher.java  HistogramFeedbackSource.java  IMEFeedbackSource.java  InterestFeedFeedbackSource.java  LowEndDeviceFeedbackSource.java  PermissionFeedbackSource.java  ProcessIdFeedbackSource.java  ScreenshotSource.java  StaticScreenshotSource.java  SystemInfoFeedbackSource.java  UrlFeedbackSource.java  VariationsFeedbackSource.java
monyhar/chrome/browser/xsurface/: BUILD.gn  DIR_METADATA  OWNERS
monyhar/chrome/browser/xsurface/android/java/src/org/chromium/chrome/browser/xsurface/: FeedActionsHandler.java  FeedLaunchReliabilityLogger.java  ImageFetchClient.java  (+13 more)
monyhar/ios/chrome/browser/providers/: BUILD.gn  chromium_browser_provider.mm  chromium_browser_provider_factory.mm  chromium_logo_controller.mm  chromium_spotlight_provider.mm  chromium_text_zoom_provider.mm  chromium_voice_search_provider.mm
monyhar/ios/chrome/browser/providers/images/: BUILD.gn  chromium_branded_image_provider.mm
monyhar/ios/chrome/browser/providers/images/resources/: BUILD.gn
monyhar/ios/chrome/browser/providers/images/resources/chromium_ios_made.imageset/: Contents.json
monyhar/ios/chrome/browser/providers/images/resources/chromium_ipados_made.imageset/: Contents.json
monyhar/ios/chrome/browser/providers/images/resources/chromium_non_default_promo.imageset/: Contents.json
monyhar/ios/chrome/browser/providers/images/resources/chromium_stay_safe.imageset/: Contents.json
monyhar/ios/chrome/browser/providers/signin/: BUILD.gn  chromium_signin_resources_provider.mm
monyhar/services/device/public/java/: BUILD.gn
monyhar/services/device/public/java/src/org/chromium/device/: DeviceFeatureList.java
monyhar/services/device/public/java/src/org/chromium/device/geolocation/: LocationProvider.java  LocationProviderOverrider.java  MockLocationProvider.java
monyhar/services/device/public/java/src/org/chromium/device/nfc/: NfcDelegate.java
monyhar/testing/android/broker/: BUILD.gn
monyhar/testing/android/broker/java/src/org/chromium/test/broker/: OnDeviceInstrumentationBroker.java
monyhar/testing/android/junit/: BUILD.gn
monyhar/testing/android/junit/java/src/org/chromium/testing/local/: CustomShadowApplicationPackageManager.java  GtestComputer.java  GtestFilter.java  GtestListener.java  GtestLogger.java  JsonListener.java  JsonLogger.java  JunitTestArgParser.java  JunitTestMain.java  LocalRobolectricTestRunner.java  PackageFilter.java  RunnerFilter.java  TestDir.java
monyhar/testing/android/junit/javatests/src/org/chromium/testing/local/: GtestFilterTest.java  GtestLoggerTest.java  PackageFilterTest.java  RunnerFilterTest.java
monyhar/weblayer/public/java/: AndroidManifest.xml  BUILD.gn  proguard.flags
monyhar/weblayer/public/java/org/chromium/weblayer/: ActionModeCallback.java  ActionModeItemType.java  BroadcastReceiver.java  Browser.java  BrowserControlsOffsetCallback.java  BrowserEmbeddabilityMode.java  BrowserFragment.java  BrowserFragmentCreateParams.java  BrowserRestoreCallback.java  BrowsingDataType.java  Callback.java  CaptureScreenShotCallback.java  ChildProcessService.java  ContextMenuParams.java  CookieChangeCause.java  CookieChangedCallback.java  CookieManager.java  CrashReporterCallback.java  CrashReporterController.java  DarkModeStrategy.java  Download.java  DownloadCallback.java  DownloadError.java  DownloadState.java  ErrorPage.java  ErrorPageCallback.java  FaviconCallback.java  FaviconFetcher.java  FindInPageCallback.java  FindInPageController.java  FullscreenCallback.java  GoogleAccountAccessTokenFetcher.java  GoogleAccountServiceType.java  GoogleAccountsCallback.java  GoogleAccountsParams.java  GooglePayDataCallbacksServiceWrapper.java  ImageDecoderService.java  LoadError.java  MediaCaptureCallback.java  MediaCaptureController.java  (+41 more)
(+15514 files in other folders)
