# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//android_webview/system_webview_apk_tmpl.gni")
import("//android_webview/variables.gni")
import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

android_library("glue_java") {
  deps = [
    "//android_webview:android_webview_product_config_java",
    "//android_webview:browser_java",
    "//android_webview:common_java",
    "//android_webview/nonembedded:system_webview_manifest",
    "//android_webview/support_library/boundary_interfaces:boundary_interface_java",
    "//android_webview/support_library/callback:callback_java",
    "//base:base_java",
    "//components/content_capture/android:java",
    "//components/embedder_support/android:application_java",
    "//components/embedder_support/android:util_java",
    "//components/version_info/android:version_constants_java",
    "//content/public/android:content_java",
    "//net/android:net_java",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//ui/android:ui_no_recycler_view_java",
    "//url:gurl_java",
  ]
  annotation_processor_deps = [ "//base/android/jni_generator:jni_processor" ]

  alternative_android_sdk_dep =
      "//third_party/android_sdk:public_framework_system_java"

  sources = [
    "java/src/com/android/webview/monyhar/CallbackConverter.java",
    "java/src/com/android/webview/monyhar/ContentSettingsAdapter.java",
    "java/src/com/android/webview/monyhar/CookieManagerAdapter.java",
    "java/src/com/android/webview/monyhar/DrawFunctor.java",
    "java/src/com/android/webview/monyhar/DrawGLFunctor.java",
    "java/src/com/android/webview/monyhar/GeolocationPermissionsAdapter.java",
    "java/src/com/android/webview/monyhar/GlueApiHelperForM.java",
    "java/src/com/android/webview/monyhar/GlueApiHelperForN.java",
    "java/src/com/android/webview/monyhar/GlueApiHelperForO.java",
    "java/src/com/android/webview/monyhar/GlueApiHelperForOMR1.java",
    "java/src/com/android/webview/monyhar/GlueApiHelperForP.java",
    "java/src/com/android/webview/monyhar/GlueApiHelperForQ.java",
    "java/src/com/android/webview/monyhar/GlueApiHelperForR.java",
    "java/src/com/android/webview/monyhar/GraphicsUtils.java",
    "java/src/com/android/webview/monyhar/PacProcessorImpl.java",
    "java/src/com/android/webview/monyhar/SafeBrowsingResponseAdapter.java",
    "java/src/com/android/webview/monyhar/ServiceWorkerClientAdapter.java",
    "java/src/com/android/webview/monyhar/ServiceWorkerControllerAdapter.java",
    "java/src/com/android/webview/monyhar/ServiceWorkerSettingsAdapter.java",
    "java/src/com/android/webview/monyhar/SharedStatics.java",
    "java/src/com/android/webview/monyhar/SharedTracingControllerAdapter.java",
    "java/src/com/android/webview/monyhar/SharedWebViewChromium.java",
    "java/src/com/android/webview/monyhar/SharedWebViewContentsClientAdapter.java",
    "java/src/com/android/webview/monyhar/SharedWebViewRendererClientAdapter.java",
    "java/src/com/android/webview/monyhar/SplitApkWorkaround.java",
    "java/src/com/android/webview/monyhar/TracingControllerAdapter.java",
    "java/src/com/android/webview/monyhar/WebBackForwardListChromium.java",
    "java/src/com/android/webview/monyhar/WebHistoryItemChromium.java",
    "java/src/com/android/webview/monyhar/WebIconDatabaseAdapter.java",
    "java/src/com/android/webview/monyhar/WebMessagePortAdapter.java",
    "java/src/com/android/webview/monyhar/WebResourceErrorAdapter.java",
    "java/src/com/android/webview/monyhar/WebResourceRequestAdapter.java",
    "java/src/com/android/webview/monyhar/WebStorageAdapter.java",
    "java/src/com/android/webview/monyhar/WebViewChromium.java",
    "java/src/com/android/webview/monyhar/WebViewChromiumAwInit.java",
    "java/src/com/android/webview/monyhar/WebViewChromiumFactoryProvider.java",
    "java/src/com/android/webview/monyhar/WebViewChromiumFactoryProviderForO.java",
    "java/src/com/android/webview/monyhar/WebViewChromiumFactoryProviderForOMR1.java",
    "java/src/com/android/webview/monyhar/WebViewChromiumFactoryProviderForP.java",
    "java/src/com/android/webview/monyhar/WebViewChromiumFactoryProviderForQ.java",
    "java/src/com/android/webview/monyhar/WebViewChromiumFactoryProviderForR.java",
    "java/src/com/android/webview/monyhar/WebViewContentsClientAdapter.java",
    "java/src/com/android/webview/monyhar/WebViewDatabaseAdapter.java",
    "java/src/com/android/webview/monyhar/WebViewDelegateFactory.java",
    "java/src/com/android/webview/monyhar/WebViewLibraryPreloader.java",
    "java/src/com/android/webview/monyhar/WebViewRenderProcessAdapter.java",
    "java/src/com/android/webview/monyhar/WebViewRenderProcessClientAdapter.java",
    "java/src/com/android/webview/monyhar/WebkitToSharedGlueConverter.java",
  ]
}
