# Copyright 2020 The Chromium Authors.All rights reserved.
# Use of this source code is governed by a BSD - style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
    "android/java/src/org/monyhar/chrome/browser/xsurface/FeedActionsHandler.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/FeedLaunchReliabilityLogger.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/FeedLoggingDependencyProvider.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/FeedNetworkRequestReliabilityLogger.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/HybridListRenderer.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/ImageFetchClient.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/ImagePrefetcher.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/ListContentManager.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/ListContentManagerObserver.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/PersistentKeyValueCache.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/ProcessScope.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/ProcessScopeDependencyProvider.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/SurfaceActionsHandler.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/SurfaceRenderer.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/SurfaceScope.java",
    "android/java/src/org/monyhar/chrome/browser/xsurface/SurfaceScopeDependencyProvider.java",
  ]
  deps = [ "//third_party/androidx:androidx_annotation_annotation_java" ]
}
