# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("broker_java") {
  monyhar_code = true

  sources =
      [ "java/src/org/monyhar/test/broker/OnDeviceInstrumentationBroker.java" ]
}
