# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_android)

import("//build/config/android/rules.gni")

java_library("junit_test_support") {
  # Skip platform checks since Robolectric depends on requires_android targets.
  bypass_platform_checks = true
  testonly = true
  sources = [
    "java/src/org/monyhar/testing/local/CustomShadowApplicationPackageManager.java",
    "java/src/org/monyhar/testing/local/GtestComputer.java",
    "java/src/org/monyhar/testing/local/GtestFilter.java",
    "java/src/org/monyhar/testing/local/GtestListener.java",
    "java/src/org/monyhar/testing/local/GtestLogger.java",
    "java/src/org/monyhar/testing/local/JsonListener.java",
    "java/src/org/monyhar/testing/local/JsonLogger.java",
    "java/src/org/monyhar/testing/local/JunitTestArgParser.java",
    "java/src/org/monyhar/testing/local/JunitTestMain.java",
    "java/src/org/monyhar/testing/local/LocalRobolectricTestRunner.java",
    "java/src/org/monyhar/testing/local/PackageFilter.java",
    "java/src/org/monyhar/testing/local/RunnerFilter.java",
    "java/src/org/monyhar/testing/local/TestDir.java",
  ]
  deps = [
    "//third_party/android_deps:robolectric_all_java",
    "//third_party/junit",
    "//third_party/mockito:mockito_java",
  ]
}

junit_binary("junit_unit_tests") {
  sources = [
    "javatests/src/org/monyhar/testing/local/GtestFilterTest.java",
    "javatests/src/org/monyhar/testing/local/GtestLoggerTest.java",
    "javatests/src/org/monyhar/testing/local/PackageFilterTest.java",
    "javatests/src/org/monyhar/testing/local/RunnerFilterTest.java",
  ]
}
