# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")
import("//build/util/process_version.gni")

_version_constants_java_file =
    "$target_gen_dir/org/monyhar/weblayer/WebLayerClientVersionConstants.java"

weblayer_client_manifest =
    "$target_gen_dir/weblayer_client_manifest/AndroidManifest.xml"

jinja_template("weblayer_client_manifest") {
  input = "AndroidManifest.xml"
  output = weblayer_client_manifest
}

android_resources("client_resources") {
  sources = [
    "res/values-night/colors.xml",
    "res/values-night/values.xml",
    "res/values-v27/styles.xml",
    "res/values-v28/styles.xml",
    "res/values/colors.xml",
    "res/values/ids.xml",
    "res/values/styles.xml",
    "res/values/values.xml",
    "res/xml/weblayer_file_paths.xml",
  ]
  android_manifest = weblayer_client_manifest
  android_manifest_dep = ":weblayer_client_manifest"
}

android_library("java") {
  sources = [
    "org/monyhar/weblayer/ActionModeCallback.java",
    "org/monyhar/weblayer/ActionModeItemType.java",
    "org/monyhar/weblayer/BroadcastReceiver.java",
    "org/monyhar/weblayer/Browser.java",
    "org/monyhar/weblayer/BrowserControlsOffsetCallback.java",
    "org/monyhar/weblayer/BrowserEmbeddabilityMode.java",
    "org/monyhar/weblayer/BrowserFragment.java",
    "org/monyhar/weblayer/BrowserFragmentCreateParams.java",
    "org/monyhar/weblayer/BrowserRestoreCallback.java",
    "org/monyhar/weblayer/BrowsingDataType.java",
    "org/monyhar/weblayer/Callback.java",
    "org/monyhar/weblayer/CaptureScreenShotCallback.java",
    "org/monyhar/weblayer/ChildProcessService.java",
    "org/monyhar/weblayer/ContextMenuParams.java",
    "org/monyhar/weblayer/CookieChangeCause.java",
    "org/monyhar/weblayer/CookieChangedCallback.java",
    "org/monyhar/weblayer/CookieManager.java",
    "org/monyhar/weblayer/CrashReporterCallback.java",
    "org/monyhar/weblayer/CrashReporterController.java",
    "org/monyhar/weblayer/DarkModeStrategy.java",
    "org/monyhar/weblayer/Download.java",
    "org/monyhar/weblayer/DownloadCallback.java",
    "org/monyhar/weblayer/DownloadError.java",
    "org/monyhar/weblayer/DownloadState.java",
    "org/monyhar/weblayer/ErrorPage.java",
    "org/monyhar/weblayer/ErrorPageCallback.java",
    "org/monyhar/weblayer/FaviconCallback.java",
    "org/monyhar/weblayer/FaviconFetcher.java",
    "org/monyhar/weblayer/FindInPageCallback.java",
    "org/monyhar/weblayer/FindInPageController.java",
    "org/monyhar/weblayer/FullscreenCallback.java",
    "org/monyhar/weblayer/GoogleAccountAccessTokenFetcher.java",
    "org/monyhar/weblayer/GoogleAccountServiceType.java",
    "org/monyhar/weblayer/GoogleAccountsCallback.java",
    "org/monyhar/weblayer/GoogleAccountsParams.java",
    "org/monyhar/weblayer/GooglePayDataCallbacksServiceWrapper.java",
    "org/monyhar/weblayer/ImageDecoderService.java",
    "org/monyhar/weblayer/LoadError.java",
    "org/monyhar/weblayer/MediaCaptureCallback.java",
    "org/monyhar/weblayer/MediaCaptureController.java",
    "org/monyhar/weblayer/MediaPlaybackBaseService.java",
    "org/monyhar/weblayer/MediaRouteDialogFragment.java",
    "org/monyhar/weblayer/MediaSessionService.java",
    "org/monyhar/weblayer/NavigateParams.java",
    "org/monyhar/weblayer/Navigation.java",
    "org/monyhar/weblayer/NavigationCallback.java",
    "org/monyhar/weblayer/NavigationController.java",
    "org/monyhar/weblayer/NavigationState.java",
    "org/monyhar/weblayer/NewTabCallback.java",
    "org/monyhar/weblayer/NewTabType.java",
    "org/monyhar/weblayer/ObserverList.java",
    "org/monyhar/weblayer/OpenUrlCallback.java",
    "org/monyhar/weblayer/Page.java",
    "org/monyhar/weblayer/PaymentDetailsUpdateServiceWrapper.java",
    "org/monyhar/weblayer/PrerenderController.java",
    "org/monyhar/weblayer/Profile.java",
    "org/monyhar/weblayer/RemoteFragment.java",
    "org/monyhar/weblayer/RemoteMediaService.java",
    "org/monyhar/weblayer/ScrollNotificationType.java",
    "org/monyhar/weblayer/ScrollOffsetCallback.java",
    "org/monyhar/weblayer/SettingType.java",
    "org/monyhar/weblayer/SettingsActivity.java",
    "org/monyhar/weblayer/SettingsFragment.java",
    "org/monyhar/weblayer/SiteSettingsActivity.java",
    "org/monyhar/weblayer/Tab.java",
    "org/monyhar/weblayer/TabCallback.java",
    "org/monyhar/weblayer/TabListCallback.java",
    "org/monyhar/weblayer/ThreadCheck.java",
    "org/monyhar/weblayer/UnsupportedVersionException.java",
    "org/monyhar/weblayer/UrlBarController.java",
    "org/monyhar/weblayer/UrlBarOptions.java",
    "org/monyhar/weblayer/UserIdentityCallback.java",
    "org/monyhar/weblayer/VerifiesOnO.java",
    "org/monyhar/weblayer/VerifiesOnR.java",
    "org/monyhar/weblayer/WebLayer.java",
    "org/monyhar/weblayer/WebLayerFileProvider.java",
    "org/monyhar/weblayer/WebMessage.java",
    "org/monyhar/weblayer/WebMessageCallback.java",
    "org/monyhar/weblayer/WebMessageReplyProxy.java",
    "org/monyhar/weblayer/WebViewCompatibilityHelper.java",
    _version_constants_java_file,
  ]

  resources_package = "org.monyhar.weblayer"
  deps = [
    ":client_resources",
    ":client_version",
    ":weblayer_client_manifest",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//third_party/androidx:androidx_appcompat_appcompat_java",
    "//third_party/androidx:androidx_core_core_java",
    "//third_party/androidx:androidx_fragment_fragment_java",
    "//third_party/androidx:androidx_lifecycle_lifecycle_common_java",
    "//third_party/androidx:androidx_lifecycle_lifecycle_viewmodel_java",
    "//weblayer/browser/java:base_module_interfaces_java",
    "//weblayer/browser/java:interfaces_java",
  ]

  proguard_configs = [ "proguard.flags" ]
}

dist_aar("client_aar") {
  deps = [
    ":java",
    ":weblayer_client_manifest",
  ]

  # The aar should only include weblayer files. The client will provide the
  # support library.
  jar_included_patterns = [
    "org/monyhar/weblayer/*",
    "org/monyhar/weblayer_private/*",
  ]
  resource_included_patterns = [ "*/weblayer/public/java/*" ]

  # R files are excluded because they are not used in the client lib and depend
  # on other generated monyhar R classes.
  jar_excluded_patterns = [
    "org/monyhar/weblayer/client/R\$*.class",
    "org/monyhar/weblayer/client/R.class",
  ]

  # dist_aar does not take the manifest from libraries in deps, so we have to
  # specify again here.
  android_manifest = weblayer_client_manifest
  output = "$root_build_dir/WebLayerClient.aar"
}

process_version("client_version") {
  process_only = true
  template_file =
      "org/monyhar/weblayer/WebLayerClientVersionConstants.java.version"
  output = _version_constants_java_file
  sources = [ "//chrome/VERSION" ]
}
