# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("java") {
  deps = [ "//third_party/androidx:androidx_annotation_annotation_java" ]
  sources = [
    "java/src/org/monyhar/chrome/browser/lifecycle/ActivityLifecycleDispatcher.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/ActivityResultWithNativeObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/ConfigurationChangedObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/DestroyObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/InflationObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/LifecycleObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/NativeInitObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/PauseResumeWithNativeObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/RecreateObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/SaveInstanceStateObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/StartStopWithNativeObserver.java",
    "java/src/org/monyhar/chrome/browser/lifecycle/WindowFocusChangedObserver.java",
  ]
}
