# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ios/public/provider/chrome/browser/build_config.gni")

source_set("providers") {
  sources = [
    "monyhar_browser_provider.h",
    "monyhar_browser_provider.mm",
    "monyhar_logo_controller.h",
    "monyhar_logo_controller.mm",
    "monyhar_spotlight_provider.h",
    "monyhar_spotlight_provider.mm",
    "monyhar_text_zoom_provider.h",
    "monyhar_text_zoom_provider.mm",
    "monyhar_voice_search_provider.h",
    "monyhar_voice_search_provider.mm",
  ]
  deps = [
    "//base",
    "//ios/chrome/browser/providers/images",
    "//ios/chrome/browser/providers/signin",
    "//ios/chrome/browser/web:feature_flags",
    "//ios/public/provider/chrome/browser",
    "//ios/public/provider/chrome/browser:font_size_java_script_feature",
    "//ios/public/provider/chrome/browser/discover_feed",
    "//ios/public/provider/chrome/browser/distribution",
    "//ios/public/provider/chrome/browser/signin",
    "//ios/public/provider/chrome/browser/spotlight",
    "//ios/public/provider/chrome/browser/ui",
    "//ios/public/provider/chrome/browser/user_feedback",
    "//ios/public/provider/chrome/browser/voice",
    "//ui/base",
  ]
  configs += [ "//build/config/compiler:enable_arc" ]
}

source_set("provider_factory") {
  sources = [ "monyhar_browser_provider_factory.mm" ]
  deps = [
    ":providers",
    "//base",
    "//ios/public/provider/chrome/browser",
  ]
  configs += [ "//build/config/compiler:enable_arc" ]
}
