# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("device_feature_list_java") {
  sources = [ "src/org/monyhar/device/DeviceFeatureList.java" ]
  deps = [ "//base:base_java" ]
  annotation_processor_deps = [ "//base/android/jni_generator:jni_processor" ]
}

android_library("nfc_java") {
  sources = [ "src/org/monyhar/device/nfc/NfcDelegate.java" ]
  deps = [ "//base:base_java" ]
}

android_library("geolocation_java") {
  sources = [ "src/org/monyhar/device/geolocation/LocationProvider.java" ]
}

android_library("geolocation_java_test_support") {
  testonly = true

  sources = [
    "src/org/monyhar/device/geolocation/LocationProviderOverrider.java",
    "src/org/monyhar/device/geolocation/MockLocationProvider.java",
  ]
  deps = [
    ":geolocation_java",
    "//base:base_java",

    # Ideally this dependency should be removed. http://crbug.com/850357
    "//services/device/geolocation:geolocation_java",
  ]
}
