# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ios/asset_catalog.gni")

imageset("monyhar_stay_safe") {
  sources = [
    "monyhar_stay_safe.imageset/Contents.json",
    "monyhar_stay_safe.imageset/monyhar_stay_safe.png",
    "monyhar_stay_safe.imageset/monyhar_stay_safe@2x.png",
    "monyhar_stay_safe.imageset/monyhar_stay_safe@3x.png",
  ]
}

imageset("monyhar_ios_made") {
  sources = [
    "monyhar_ios_made.imageset/Contents.json",
    "monyhar_ios_made.imageset/monyhar_ios_made.png",
    "monyhar_ios_made.imageset/monyhar_ios_made@2x.png",
    "monyhar_ios_made.imageset/monyhar_ios_made@3x.png",
    "monyhar_ios_made.imageset/monyhar_ios_made_dark.png",
    "monyhar_ios_made.imageset/monyhar_ios_made_dark@2x.png",
    "monyhar_ios_made.imageset/monyhar_ios_made_dark@3x.png",
  ]
}

imageset("monyhar_ipados_made") {
  sources = [
    "monyhar_ipados_made.imageset/Contents.json",
    "monyhar_ipados_made.imageset/monyhar_ipados_made@2x.png",
    "monyhar_ipados_made.imageset/monyhar_ipados_made@3x.png",
    "monyhar_ipados_made.imageset/monyhar_ipados_made_dark@2x.png",
    "monyhar_ipados_made.imageset/monyhar_ipados_made_dark@3x.png",
  ]
}

imageset("monyhar_non_default_promo") {
  sources = [
    "monyhar_non_default_promo.imageset/Contents.json",
    "monyhar_non_default_promo.imageset/monyhar_non_default_promo@2x.png",
    "monyhar_non_default_promo.imageset/monyhar_non_default_promo@3x.png",
  ]
}

imageset("download_drivium") {
  sources = [
    "download_drivium.imageset/Contents.json",
    "download_drivium.imageset/download_drivium.png",
    "download_drivium.imageset/download_drivium@2x.png",
    "download_drivium.imageset/download_drivium@3x.png",
  ]
}
